Bug 401433 - Highlight/autoselect file issue from "Results" tab in search window
Summary: Highlight/autoselect file issue from "Results" tab in search window
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: search (other bugs)
Version First Reported In: 2.7.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
: 450340 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-11-26 14:29 UTC by Rafael Linux User
Modified: 2024-12-05 17:15 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Linux User 2018-11-26 14:29:55 UTC
SUMMARY
From the "search" window, after a search is done and the files matched are showed, if I click on a file of the results tab, Krusader window appear, showing in actual panel the folder where the file clicked is located, but the file clicked is not automatically selected (as it should). If in Krusader panel, I change to other folder and in the "Search" window I click in the same previously clicked filename, Krusader panel will change to the correct folder (again) BUT the file clicked is NOT selected. That's to say, Krusader auto-select

STEPS TO REPRODUCE
1. Search for files containing same (existing) text in a folder with subfolders. Must exist at least TWO files matching criteria in each folder, to see the issue.
2. In the "Results" tab in "Search" window, ordered by name, to have files ordered first by folder, and the by filename. It should appear two files in each folder.
3. Click on the first file (of the two that must appear in each folder) of a folder. Krusader panel will change to the folder where is located the file and (if not in the folder previously) Krusader will highlight the file you clicked in "Search" window.
4. Click on the second file of the same previously folder. This time, Krusader will not select the file you clicked.
5. Return to "Results" tab and this time choose the first file in a distinct folder than in steps 3 and 4. Krusader will show you the folder and will highlight the clicked file.
6. Repeat step 4. Result is the same.

OBSERVED RESULT
Krusader doesn't highlight (select) files if Krusader are showing yet the folder where the file clicked is located.

EXPECTED RESULT
To change to the folder containing the file and highlightning the clicked file.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: OpenSUSE 15
KDE Plasma Version:  5.12.6
KDE Frameworks Version: 5.45.0
Qt Version: 5.9.4

ADDITIONAL INFORMATION
Comment 1 Davide Gianforte 2020-01-01 11:05:44 UTC
Proposed patch: https://phabricator.kde.org/D26334
Comment 2 Davide Gianforte 2020-02-08 13:52:17 UTC
Git commit f636ba2b616b197eefca66378f8691bfa7d99186 by Davide Gianforte.
Committed on 08/02/2020 at 13:51.
Pushed by gengisdave into branch 'master'.

Select item from search window

When you select an item from the search window but the panel has already the
same path, the focus switches but the new item is not selected. This patch set
the new item in the folder.

FIXED: [ 401433 ] Highlight/autoselect file issue from "Results" tab in search window

Differential Revision: https://phabricator.kde.org/D26334

M  +1    -0    krusader/Panel/panelfunc.cpp

https://commits.kde.org/krusader/f636ba2b616b197eefca66378f8691bfa7d99186
Comment 3 Rafael Linux User 2020-02-08 20:16:09 UTC
THANK YOU, I wish the patched version will be in OpenSUSE 15.1 repositories soon!!! I need it!! Krusader is the best file manager for Linux by far.
Comment 4 Alex Bikadorov 2024-12-05 17:15:46 UTC
*** Bug 450340 has been marked as a duplicate of this bug. ***