Select item from search window

When you select an item from the search window but the panel has already the
same path, the focus switches but the new item is not selected. This patch set
the new item in the folder.

FIXED: [ 401433 ] Highlight/autoselect file issue from "Results" tab in search window
BUG: 401433

Differential Revision: https://phabricator.kde.org/D26334